build: ignore github.com/olekukonko/tablewriter in dependabot
I'm too lazy to migrate to new API.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,5 @@ updates:
     schedule:
       interval: "monthly"
     open-pull-requests-limit: 5
+    ignore:
+      - dependency-name: "github.com/olekukonko/tablewriter"
